...
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="84c-rc-JDT">
                                <rect key="frame" x="303" y="47" width="64" height="31"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                <state key="normal" title="Add Dog"/>
                                <connections>
                                    <segue destination="fss-no-XfR" kind="show" id="eXK-Zs-lWs"/>
                                </connections>
                            </button>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="x2W-rU-Io9">
                                <rect key="frame" x="0.0" y="102" width="375" height="565"/>
...
                                <rect key="frame" x="0.0" y="87" width="375" height="214"/>
                                <color key="backgroundColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="214" id="nrB-vz-qyw"/>
                                </constraints>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dog Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gFe-uA-cZw">
                                <rect key="frame" x="15" y="319" width="345" height="65"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="65" id="gCZ-ZK-uli"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="SFUIDisplay-Medium" family="SF UI Display" pointSize="16"/>
                                <nil key="textColor"/>
...
                                <rect key="frame" x="0.0" y="392" width="375" height="3"/>
                                <color key="backgroundColor" red="0.87450980392156863" green="0.87450980392156863" blue="0.87450980392156863" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="3" id="ors-XT-Ul8"/>
                                </constraints>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Owner" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6T-kU-Q7p">
                                <rect key="frame" x="15" y="414" width="345" height="74"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="74" id="dOc-ge-wFS"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="SFUIDisplay-Medium" family="SF UI Display" pointSize="16"/>
                                <nil key="textColor"/>
...
                                <rect key="frame" x="8" y="28" width="50" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="AUm-85-4vs"/>
                                    <constraint firstAttribute="width" constant="50" id="skL-zM-N6e"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="SFUIDisplay-Medium" family="SF UI Display" pointSize="16"/>
                                <state key="normal" title="Cancel"/>
                                <connections>
                                    <segue destination="BYZ-38-t0r" kind="show" id="1CZ-xh-j1A"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zdf-ef-HYW">
                                <rect key="frame" x="332" y="28" width="35" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="3EF-A9-1dF"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="SFUIDisplay-Medium" family="SF UI Display" pointSize="16"/>
                                <state key="normal" title="Save">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="saveDogWith_sender:" destination="fss-no-XfR" eventType="touchUpInside" id="xMp-Sa-dbR"/>
                                </connections>
                            </button>
...
